# personal_site

./: Cargo.toml  Design Docs.drawio  Dioxus.toml  README.md  Wireframe.drawio  contact.html  education.html  experience.html  index.html  interests.html  next.config.mjs  package-lock.json  package.json  skills.html  style.css  wrangler.jsonc
.github/: FUNDING.yml
.github/workflows/: githubPages.yml
ENSF 381 Assignment Backup/: contact.html  experience.html  skills.html
Old Version/: education.html  index.html  interests.html
assets/: robots.txt
assets/styling/: blog.css  contact.css  contactme.css  ender.css  experience.css  home.css  main.css  navbar.css  notFound.css  projectCards.css  standardColoursandFonts.css  techs.css
old dioxus/: techs.json
old dioxus/assets/styling/: blog.css  contact.css  contactme.css  ender.css  home.css  notFound.css
old dioxus/dioxus info/: README.md
old dioxus/src/components/: techs.rs
old dioxus/src/views/: contact.rs  home.rs  new_home.rs  projects.rs
src/: globals.css  helper_fun.rs  lib.rs  main.rs  page.module.css
src/app/: layout.js  not-found.js  page.js
src/components/: experience.rs  footer.rs  hero.rs  mod.rs  techs.rs
src/components/footer/: ender.jsx
src/components/navbar/: navbar.jsx
src/views/: blog.rs  contact.rs  contact_me.rs  footer.rs  home.rs  mod.rs  navbar.rs  projects.rs
